fixes mobile layout issues and updates readme

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -567,23 +567,27 @@ button svg {
   margin: 1rem;
   background-color: white;
   border-radius: 0.5rem;
-  overflow-y: hidden;
+  overflow-y: scroll;
 }
 
 .panel--product__menu {
-  height: 4rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
   padding: 1rem;
   border-bottom: 2px solid #DCDADA;
 }
 .panel--product__menu div {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  width: 38rem;
+  display: none;
+}
+@media (min-width: 48rem) {
+  .panel--product__menu div {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 38rem;
+  }
 }
 
 .panel--product--card {
@@ -605,24 +609,30 @@ button svg {
 .panel--product__view h2 {
   margin-bottom: 1rem;
 }
-.panel--product__view dl {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  gap: 1rem;
-  max-width: 20rem;
-}
-.panel--product__view dl img {
-  border-radius: 0.25rem;
-}
-.panel--product__view dl div {
-  display: flex;
-  justify-content: space-between;
+@media (min-width: 30rem) {
+  .panel--product__view dl {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 1rem;
+    max-width: 20rem;
+  }
+  .panel--product__view dl img {
+    border-radius: 0.25rem;
+  }
+  .panel--product__view dl div {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 .panel--product__view .controls {
-  display: flex;
-  justify-content: space-between;
   margin-top: 1rem;
+}
+@media (min-width: 30rem) {
+  .panel--product__view .controls {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .tooltip {
